# genesys-pqrsf-demo

./: .gitignore  README.md  app.py  noxfile.py  pyproject.toml  requirements.txt  test_app.py
.chalice/: config.json
chalicelib/: crud.py  helpers.py  models.py
